grafana-loki-stack/manifests/monitoring/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - env:
            - name: GF_SECURITY_ADMIN_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: GF_SECURITY_ADMIN_PASSWORD
                  name: grafana-configmap
            - name: GF_USERS_ALLOW_SIGN_UP
              valueFrom:
                configMapKeyRef:
                  key: GF_USERS_ALLOW_SIGN_UP
                  name: grafana-configmap
          image: grafana/grafana:7.5.4
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          securityContext:
            runAsUser: 472
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-data
            - mountPath: /etc/grafana/provisioning/datasources
              name: provisioning-datasources
            - mountPath: /etc/grafana/provisioning/dashboards
              name: provisioning-dashboards
            - mountPath: /var/lib/grafana/dashboards
              name: dashboards
      restartPolicy: Always
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: provisioning-datasources
          configMap:
            name: grafana-provisioning-datasources
        - name: provisioning-dashboards
          configMap:
            name: grafana-provisioning-dashboards
        - name: dashboards
          configMap:
            name: grafana-dashboards
