grafana-loki-stack/manifests/monitoring/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - args:
            - -config.file=/etc/loki/loki.yaml
          image: grafana/loki:2.0.0
          name: loki
          ports:
            - containerPort: 3100
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: loki-data
            - name: config
              mountPath: /etc/loki
      restartPolicy: Always
      volumes:
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-data
        - name: config
          configMap:
            name: loki-configmap
