grafana-loki-stack/manifests/monitoring/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
  name: loki
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3100
  selector:
    app: loki
status:
  loadBalancer: {}
