grafana-loki-stack/manifests/monitoring/promtail-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: promtail
  name: promtail
spec:
  ports:
    - name: "3101"
      port: 3101
      targetPort: 3101
  selector:
    app.kubernetes.io/name: promtail
